# agentic-ai-demo

./: README.md  pyproject.toml
simple_agent/: simpel_agent.py  warriors.py  warriors_heb.py
