[tool.poetry]
name = "agentic-ai-demo"
version = "0.1.0"
description = ""
authors = ["nirkon <nirk@originai.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.6.1"
python-bidi = "^0.6.3"
arabic-reshaper = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
